<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_patients"
        android:icon="@drawable/ic_deportista"
        android:title="@string/nav_patients" />
    <item
        android:id="@+id/navigation_reports"
        android:icon="@drawable/ic_report"
        android:title="@string/nav_reports" />
    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_calendar"
        android:title="@string/nav_schedule" />
    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_message"
        android:title="@string/nav_messages" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>
